[package]
name = "ktuctl-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zerocopy = { version = "0.8", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dns-lookup = "3.0"
lazy_static = "1.5"
byteorder = "1.5"
shlex = "1.3"
chrono = "0.4"
libc = "0.2"


netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-generic = "0.3"
bytes = "1"
